src/CSS/Navbar.css
.custom-transition {
  transition: all 0.5s ease-in;
}

#navbar {
  z-index: 1; /* Use a whole number for z-index */
  color: white;
  display: flex;
  justify-content: space-between;
  position: sticky;
  /* position: fixed; */
  top: 0;
  left: 0;
  width: 100%; /* Use width instead of min-width */
  /* background-color: #003f5e; */
  /* background-color: #274472; */

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* padding: 1rem 0.5px; */
}

.navbar_header {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  background: #274472;
  width: 100%;
  padding: 1rem 0; 
}
.heading_logo {
  text-transform: none;
}
.navbar_header img {
  height: 3rem;
}
.heading_name {
  cursor: pointer;
  padding: 0 1rem;
  font-size: 1.3rem;
  text-align: center;
  color: white;
  font-weight: bold;
  font-family: "Times New Roman";
  /* text-transform: uppercase; */
}
/* menu bar */
#navbar_menu {
  display: flex;
  align-items: center;
  background: #274472;
  width: 100%;
  border-top: 1px solid #716d6d;
}
#nav_ul {
  display: flex;
  font-family: "Times New Roman";
  gap: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  font-weight: 500;
}
.nav_list {
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
}
.nav_link {
  font-size: 1.1rem;
  padding: 1rem;
  cursor: pointer;
  color: white;
  border-radius: 7px;
  text-decoration: none;
  transition: 0.2s all ease-in;
}
.nav_link:hover {
  color: rgb(113, 230, 113);
}
.menu_button {
  position: absolute;
  top: 2rem;
  right: 0rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
/* remix icon */
.ri-menu-fill,
.ri-close-line {
  position: absolute;
  right: 0.75rem;
  cursor: pointer;
}

@media (max-width: 800px) {
  #navbar_menu {
    position: absolute;
    top: 6.9rem;
    height: 100vh;
    width: 100%;
    flex-direction: column;
    background-color: #f2f2f2;
    transition: all 0.2s ease-in-out;
  }
  #nav_ul {
    width: 100%;
    flex-direction: column;
  }
  #nav_ul .nav_list {
    width: 100%;
    border-bottom: 1px solid rgb(190, 189, 189);
  }
  #nav_ul .nav_list a {
    font-size: 1.2rem;
    font-family: "Times New Roman";
    color: black;
    font-weight: 600;
    text-align: left;
    width: 100%;
  }
  #nav_ul .nav_list a:hover {
    color: red;
  }
}


@media (max-width: 631px) {
  #navbar_menu {
    top: 8.2rem;
  }
}

